--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,6 @@
 [project]
 name = "revise-tools"
+requires-python = "==3.13.*,<4.0"
 version = "0.1.0"
 description = ""
 authors = [
@@ -8,7 +9,6 @@ authors = [
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.13,<4.0"
 pandas = ">=2.2.3,<3.0.0"
 openpyxl = ">=3.1.5,<4.0.0"
 fastapi = ">=0.115.12,<0.116.0"
